<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/article_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_daily_article" />

    <TextView
        android:id="@+id/blockTitle"
        android:layout_width="239dp"
        android:layout_height="27dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/block_name"
        android:fontFamily="@font/montserrat_bold"
        android:text="Тема"
        android:textColor="#000"
        android:textSize="18sp"
        android:transitionName="titleTheme"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/blockText"
        android:layout_width="322dp"
        android:layout_height="83dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/block_text"
        android:fontFamily="@font/montserrat"
        android:text="TextView"
        android:layout_gravity="center_vertical|end"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/blockTitle"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/expanded_menu"
        android:layout_width="44dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_more" />

    <ImageView
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/blockTitle"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_uncheked" />
</androidx.constraintlayout.widget.ConstraintLayout>