<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayoutMain"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/main_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/drawer_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/menu_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_menu_icon" />

            <TextView
                android:id="@+id/page_name_articles"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/all_articles"
                android:textColor="@color/black"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/articlesRecycler"
            android:layout_width="342dp"
            android:layout_height="538dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <LinearLayout
            android:id="@+id/linearLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/main_green"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/fact"
                android:onClick="goToInterestingFacts"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_lamp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/main_articles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:srcCompat="@drawable/ic_main" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/profile"
                android:onClick="goToProfile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_profile" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="11dp"
            android:onClick="goToAddTopic"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/layout_navigation_header"
        android:layout_gravity="start"/>




</androidx.drawerlayout.widget.DrawerLayout>