<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayoutFacts"
    tools:context=".InterestingFacts">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageFact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="152dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/image_fact" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/main_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/drawer_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/menu_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_menu_icon" />

            <TextView
                android:id="@+id/page_name_articles"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/int_facts"
                android:textColor="@color/black"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/main_green"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/fact"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_yellow_lamp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/main_articles"
                android:onClick="goToArticles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:srcCompat="@drawable/ic_white_articles" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/profile"
                android:onClick="goToProfile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_profile" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            app:layout_constraintBottom_toTopOf="@+id/imageFact"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_star_yellow" />

        <TextView
            android:id="@+id/textFact"
            android:layout_width="325dp"
            android:layout_height="60dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="43dp"
            android:fontFamily="@font/montserrat"
            android:text="Studies show that if people adjust their facial expression to reflect an emotion, they actually begin to feel that emotion."
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageFact" />

        <TextView
            android:id="@+id/linkFact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="62dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="Find out more =>"
            android:textColor="#3C6287"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFact" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="73dp"
            android:layout_height="78dp"
            android:onClick="showNextFact"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_button_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/layout_navigation_header"
        android:layout_gravity="start"/>


</androidx.drawerlayout.widget.DrawerLayout>