<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayoutProfile"
    tools:context=".Profile">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/main_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/drawer_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/menu_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_menu_icon" />

            <TextView
                android:id="@+id/page_name_articles"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="Profile"
                android:textColor="@color/black"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/linearLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/main_green"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/fact"
                android:onClick="goToInterestingFacts"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_lamp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/main_articles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:srcCompat="@drawable/ic_white_articles" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_yellow_profile" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="29dp"
            android:src="@drawable/ic_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="33dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="Hello, Daria"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="247dp"
            android:layout_height="19dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/montserrat"
            android:text="Thanks for studying with us 27 days"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="38dp"
            android:src="@drawable/statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="38dp"
            android:src="@drawable/themes_block"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/layout_navigation_header"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>